# Task-and-Project-Tracker

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
task_and_project_tracker/: hooks.py  modules.txt  tasks.py
task_and_project_tracker/config/: desktop.py  docs.py
task_and_project_tracker/task_and_project/doctype/grading_criteria/: grading_criteria.js  grading_criteria.json  grading_criteria.py  test_grading_criteria.py
task_and_project_tracker/task_and_project/doctype/milestones/: milestones.js  milestones.json  milestones.py  test_milestones.py
task_and_project_tracker/task_and_project/doctype/project_details/: project_details.js  project_details.json  project_details.py  test_project_details.py
task_and_project_tracker/task_and_project/doctype/projects_types/: projects_types.js  projects_types.json  projects_types.py  test_projects_types.py
task_and_project_tracker/task_and_project/doctype/subtasks/: subtasks.json  subtasks.py
task_and_project_tracker/task_and_project/doctype/subtasks_list/: subtasks_list.js  subtasks_list.json  subtasks_list.py  test_subtasks_list.py
task_and_project_tracker/task_and_project/doctype/task_details/: task_details.js  task_details.json  task_details.py  test_task_details.py
task_and_project_tracker/task_and_project/doctype/tasks/: tasks.js  tasks.json  tasks.py  test_tasks.py
task_and_project_tracker/task_and_project/notification/due_date_in_24_hours/: due_date_in_24_hours.json  due_date_in_24_hours.md
task_and_project_tracker/task_and_project/print_format/project_plan/: project_plan.json
(+13 files in other folders)
